--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
@@ -239,7 +239,7 @@
                                                         <td>
                                                             <div class="form-check">
                                                                 <label class="form-check-label">
-                                                                    <input class="form-check-input" type="checkbox" value="" checked formControlName="premature_births_status">
+                                                                    <input class="form-check-input" type="checkbox" value="" formControlName="premature_births_status">
                                                                     <span class="form-check-sign">
                                                                         <span class="check"></span>
                                                                     </span>
