--- a/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
+++ b/Frontend/src/app/MOHComponents/view-babiesof-area/view-babiesof-area.component.html
@@ -5,164 +5,86 @@
             
             <div class="col-md-4"></div>
             <div class="col-md-5"><h3>View Babies of the Area</h3></div>
-            <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-danger btn-block">Add a new Baby</a></div>
+            <div class="col-md-3"> <a routerLink="AddMotherBabyJoined" class="btn btn-info btn-block">Add a new Baby</a></div>
         </div>
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  <div class="card-header card-header-danger">
+                  <div class="card-header card-header-info">
                       <h4 class="card-title ">Simple Table</h4>
                       <p class="card-category"> Here is a subtitle for this table</p>
                   </div>
                   <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                            <tbody>
+                                <tr>
+                                    <td align="center" rowspan=4><b>Mother No</b></td>  <td align="center" rowspan=4><b>Name of the Child</b></td>  <td align="center" rowspan=4><b>Mothers Name</b></td>  <td align="center" rowspan=4><b>Address</b></td>  <td align="center" rowspan=4><b>Sex</b></td>  <td align="center" rowspan=4><b>Date of Birth</b></td>  <td align="center" rowspan=4><b>Birth Weight</b></td>  <td align="center" rowspan=4><b>Date of Registration</b></td>  <td rowspan=4><b>Registration Category</b></td>  <td colspan=17 align="center"><b>Date of Immunization</b></td>  <td align="center" colspan=11><b>Vitamin a mega dose</b></td><td rowspan = 4><b>Remarks</b></td>
+                                </tr>
+                                <tr>
+                                    <td align="center" rowspan=3><b>BGC</b></td><td align="center" rowspan=3><b>SCAR (Y/N)</b></td><td align="center" colspan=3 rowspan=2><b>Pentavalent</b></td><td align="center" colspan=5><b>Polio</b></td><td align="center" rowspan=3><b>Japanese Encephalitis</b></td><td align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) I</b></td><td align="center" rowspan=3><b>Diptheria/Pertusis/Tetanus 4</b></td><td align="center" rowspan=3><b>Polio 4</b></td><td align="center" rowspan=3><b>Measles/Mumps/Rubella (MMR) 2</b></td><td align="center" rowspan=3><b>Diptheria/Tetanus 5</b></td><td align="center" rowspan=3><b>Diptheria/Tetanus 6</b></td><td align="center" rowspan=3><b>Postnatal Mothers</b></td><td align="center" rowspan=3><b>At 6<sup>th</sup> Month</b></td><td align="center"><b>At 1 year</b></td><td align="center" rowspan=3><b>At 1 1/2 years</b></td><td align="center" rowspan="3"><b>At Two Years</b></td><td align="center" rowspan=3><b>At 2 1/2 Years</b></td><td align="center" rowspan=3><b>At 3 Years</b></td><td align="center" rowspan=3><b>At 4 Years</b></td><td align="center" rowspan=3><b>At 4 1/2 Years</b></td><td align="center" rowspan=3><b>At 9 Years</b></td><td align="center" rowspan=3><b>At 12 Years</b></td>
+                                </tr>
+                                <tr>
+                                    <td align="center" colspan=3><b>OPV</b></td><td align="center" colspan="2"><b>FPV</b></td>
+                                </tr>
+                                <tr>
+                                        <td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>1</b></td><td><b>2</b></td><td><b>3</b></td><td><b>2m</b></td><td><b>4m</b></td>
+                                </tr>
+                                
+                                <tr *ngFor="let motherbabyjoineddata of motherbabyjoineddatas" (click)="onClickMe(motherbabyjoineddata.baby_id)" style="cursor:pointer">
+                                    <td>{{motherbabyjoineddata.mother_id}}</td>
+                                    <td>{{motherbabyjoineddata.child_name}}</td>
+                                    <td>{{motherbabyjoineddata.mothers_name}}</td>
+                                    <td>{{motherbabyjoineddata.address}}</td>
+                                    <td>{{motherbabyjoineddata.sex}}</td>
+                                    <td>{{motherbabyjoineddata.date_of_birth | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.birth_weight}}</td>
+                                    <td>{{motherbabyjoineddata.registration_date | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.registration_category}}</td>
 
-                      <div *ngFor="let family of families">
-                          <ul>
-                                  {{family | json}}
-                            {{family.Pregnancy_details__Pregnancy__First}}
-                          </ul>
-                       </div>
+                                    <td>{{motherbabyjoineddata.immunization__BGC}}</td>
+                                    <td>{{motherbabyjoineddata.immunization__scar}}</td>
 
+                                    <td>{{motherbabyjoineddata.immunization__pentavalent__first | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__pentavalent__second | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__pentavalent__third | date: 'yyyy/MM/dd' }}</td>
 
+                                    <td>{{motherbabyjoineddata.immunization__polio__opv__first | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__polio__opv__second | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__polio__opv__third | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__polio__fipv__two_m | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__polio__fipv__foru_m | date: 'yyyy/MM/dd' }}</td>
+
+                                    <td>{{motherbabyjoineddata.immunization__japanese_encephalitis | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__measles_mumps_rubella_mmr_1 | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__diptheria_pertusis_tetanus_4 | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__polio_4 | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__measles_mumps_rubella_mmr_2 | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__diptheria_tetanus_5 | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.immunization__diptheria_tetanus_6 | date: 'yyyy/MM/dd' }}</td>
+                                    
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__postnatal_mothers | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_sixth_month | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_first_year | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_one_and_half_yr | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_two | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_two_and_half | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_three | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_four | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_four_and_half | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_nine | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.vitamin_a_mega_dose__at_year_twelve | date: 'yyyy/MM/dd' }}</td>
+                                    <td>{{motherbabyjoineddata.remarks}}</td>
+                                    
+                                    </tr>
+                                </tbody>
+                        </table>
+                    </div>
 
                   </div>
           </div>
       </div>
-      <div class="col-md-12">
-          <div class="card card-plain">
-              <div class="card-header card-header-danger">
-                  <h4 class="card-title mt-0"> Table on Plain Background</h4>
-                  <p class="card-category"> Here is a subtitle for this table</p>
-              </div>
-              <div class="card-body">
-                  <div class="table-responsive">
-                      <table class="table table-hover">
-                          <thead class="">
-                              <th>
-                                  ID
-                              </th>
-                              <th>
-                                  Name
-                              </th>
-                              <th>
-                                  Country
-                              </th>
-                              <th>
-                                  City
-                              </th>
-                              <th>
-                                  Salary
-                              </th>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td>
-                                      1
-                                  </td>
-                                  <td>
-                                      Dakota Rice
-                                  </td>
-                                  <td>
-                                      Niger
-                                  </td>
-                                  <td>
-                                      Oud-Turnhout
-                                  </td>
-                                  <td>
-                                      $36,738
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      2
-                                  </td>
-                                  <td>
-                                      Minerva Hooper
-                                  </td>
-                                  <td>
-                                      Curaçao
-                                  </td>
-                                  <td>
-                                      Sinaai-Waas
-                                  </td>
-                                  <td>
-                                      $23,789
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      3
-                                  </td>
-                                  <td>
-                                      Sage Rodriguez
-                                  </td>
-                                  <td>
-                                      Netherlands
-                                  </td>
-                                  <td>
-                                      Baileux
-                                  </td>
-                                  <td>
-                                      $56,142
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      4
-                                  </td>
-                                  <td>
-                                      Philip Chaney
-                                  </td>
-                                  <td>
-                                      Korea, South
-                                  </td>
-                                  <td>
-                                      Overland Park
-                                  </td>
-                                  <td>
-                                      $38,735
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      5
-                                  </td>
-                                  <td>
-                                      Doris Greene
-                                  </td>
-                                  <td>
-                                      Malawi
-                                  </td>
-                                  <td>
-                                      Feldkirchen in Kärnten
-                                  </td>
-                                  <td>
-                                      $63,542
-                                  </td>
-                              </tr>
-                              <tr>
-                                  <td>
-                                      6
-                                  </td>
-                                  <td>
-                                      Mason Porter
-                                  </td>
-                                  <td>
-                                      Chile
-                                  </td>
-                                  <td>
-                                      Gloucester
-                                  </td>
-                                  <td>
-                                      $78,615
-                                  </td>
-                              </tr>
-                          </tbody>
-                      </table>
-                  </div>
-              </div>
-          </div>
-      </div>
+  
   </div>
 </div>
 </div>
