--- a/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
+++ b/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
@@ -40,10 +40,18 @@
                       </div>
                      <!--end 1st field-->
                    </div>
+                   <div class="main-field">
+                   <!-- <mat-accordation> -->
+                                          
+                      <mat-expansion-panel>
+                          <mat-expansion-panel-header>
+                              <mat-panel-title><h4>Personal And Medical Details Of Pregnancy Women</h4></mat-panel-title>
+                              <mat-panel-description>This Field Has some required fields.</mat-panel-description>
+                            </mat-expansion-panel-header>
                    <div class="second_field">
                      <!--start 2nd field-->
-                     <h4>Registration Details</h4>
-                     <div class="row">
+
+                    <div class="row">
                        <div class="col-md-3">
                           <mat-form-field class="example-full-width">
                               <input matInput placeholder="Registration Number" type= "text" formControlName="registration_number" >
@@ -103,11 +111,13 @@
                             </mat-form-field>
                        </div>
                      </div>
+                    
+                    
                      <!--end 2nd field-->
                    </div>
                    <div class="third_field">
                      <!--start third field-->
-                     <h4>Personal Details</h4>
+                    
                      <div class="row">
                        <div class="col-md-3">
                           <mat-form-field class="example-full-width">
@@ -190,8 +200,10 @@
                             </mat-form-field>
                        </div>
                      </div>
+                
                      <!--end third field-->
                    </div>
+                  <!-- </mat-accordation> -->
                    <div class="fourth_field">
                      <!--start 4 field-->
                      <div class="card-body table-responsive">
@@ -974,10 +986,16 @@
                       </div>
                      <!--end 9 field-->
                    </div>
+                  </mat-expansion-panel>
                    <div class="second_page">
                      <!--start second page-->
-                     <h4>Early Obstetric Details</h4>
-                     <div class="card-body">
+                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                                            (closed)="panelOpenState = false">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title><h4>Early Obstetric Details</h4></mat-panel-title>
+                                <mat-panel-description>Early Obstetric Details Of Pregnancy Women</mat-panel-description>
+                              </mat-expansion-panel-header>
+                      <div class="card-body">
                         <div class="tab-content">
                             <div class="tab-pane active" id="profile">
                                 <table class="table">
@@ -1435,11 +1453,17 @@
                           </div>
                         </div>
                      <!--end second page-->
+                     </mat-expansion-panel>
                    </div>
                    <div class="third_page">
                      <!--start third page-->
-                     <h3>Clinic Details</h3>
-                     <h4>First Four Clinics</h4>
+                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                                            (closed)="panelOpenState = false">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title><h4>Clinic Details</h4></mat-panel-title>
+                                <mat-panel-description>Clinic Details Of Pregnancy Women</mat-panel-description>
+                              </mat-expansion-panel-header>
+                  <h4>First Four Clinics</h4>
                      <div class="card-body">
                         <div class="tab-content">
                             <div class="tab-pane active" id="profile">
@@ -2654,11 +2678,17 @@
                          <!--end 3 field-->
                        </div>
                        <!-- missing field -->
+                       </mat-expansion-panel>
                      <!--end third page-->
                    </div>
                    <div class="fourth_page">
                      <!--start 4th page-->
-                     <h3>After Delivery</h3>
+                     <mat-expansion-panel  (opened)="panelOpenState = true"
+                                            (closed)="panelOpenState = false">
+                            <mat-expansion-panel-header>
+                                <mat-panel-title><h4>After Delivery Details</h4></mat-panel-title>
+                                <mat-panel-description>After Delivery Details Details Of Pregnancy Women</mat-panel-description>
+                              </mat-expansion-panel-header>
                      <div class="row">
                        <div class="col-md-4">
                           <mat-form-field class="example-full-width">
@@ -3681,8 +3711,11 @@
                        </div>
                        <!--end 6 field-->
                      </div>
+                     </mat-expansion-panel>
                      <!--end 4thpage-->
                    </div>
+                  <!-- </mat-accordation> -->
+                  </div>
 
                       <input type="submit" value="Submit details" class="btn btn-danger pull-right">
                     </form>
