--- a/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
+++ b/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="card">
-                <div class="card-header card-header-danger">
+                <div class="card-header card-header-info">
                     <h4 class="card-title">Add baby details</h4>
                 </div>
                 <div class="card-body">   
@@ -267,7 +267,7 @@
                                         </mat-form-field>
                                 </div>
                         </div>
-                        <input type="submit" value="Submit baby details" class="btn btn-danger pull-right">
+                        <input type="submit" value="Submit baby details" class="btn btn-info pull-right">
                     </form>
                     <div *ngIf="success"><h5>You submitted a new baby record successfully</h5></div>
                 </div>
