--- a/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
+++ b/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
@@ -119,14 +119,14 @@
                      <!--start third field-->
                     
                      <div class="row">
-                       <div class="col-md-3">
+                       <!-- <div class="col-md-3">
                           <mat-form-field class="example-full-width">
                               <input matInput placeholder="Mother ID" type= "text" formControlName="mother_id" >
                               <div *ngIf="submitted && PregnancyForm.controls.mother_id.errors" class="error">
                                   <div *ngIf="PregnancyForm.controls.mother_id.errors.required">This field is required</div>
                                 </div>
                             </mat-form-field>
-                       </div>
+                       </div> -->
                        <div class="col-md-3">
                           <mat-form-field class="example-full-width">
                               <input matInput placeholder="Mother Name" type= "text" formControlName="mothers_name" >
