--- a/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
@@ -22,10 +22,15 @@
                         <td rowspan = 2><b>Date Of Birth</b></td>
                         <td colspan=2 align="center">At Birth</td>
                         <td colspan=12 align="center">Age Of Child(Month) 1 Year</td>
+                        <td colspan=2 align="center">Age Of Child(Month) 1 Year</td>
                         <td colspan=12 align="center">Age Of Child(Month) 2 Year</td>
+                        <td colspan=2 align="center">Age Of Child(Month) 2 Year</td>
                         <td colspan=12 align="center">Age Of Child(Month) 3 Year</td>
+                        <td colspan=2 align="center">Age Of Child(Month) 3 Year</td>
                         <td colspan=12 align="center">Age Of Child(Month) 4 Year</td>
+                        <td colspan=2 align="center">Age Of Child(Month) 4 Year</td>
                         <td colspan=12 align="center">Age Of Child(Month) 5 Year</td>
+                        <td colspan=2 align="center">Age Of Child(Month) 5 Year</td>
                         <td rowspan = 4><b>Other</b></td>
                       </tr>
 
@@ -44,6 +49,8 @@
                           <td><b>10</b></td>
                           <td><b>11</b></td>
                           <td><b>12</b></td>
+                          <td><b>Date</b></td>
+                          <td><b>Length</b></td>
                           <td><b>1</b></td>
                           <td><b>2</b></td>
                           <td><b>3</b></td>
@@ -56,6 +63,8 @@
                           <td><b>10</b></td>
                           <td><b>11</b></td>
                           <td><b>12</b></td>
+                          <td><b>Date</b></td>
+                          <td><b>Length</b></td>
                           <td><b>1</b></td>
                           <td><b>2</b></td>
                           <td><b>3</b></td>
@@ -68,6 +77,8 @@
                           <td><b>10</b></td>
                           <td><b>11</b></td>
                           <td><b>12</b></td>
+                          <td><b>Date</b></td>
+                          <td><b>Length</b></td>
                           <td><b>1</b></td>
                           <td><b>2</b></td>
                           <td><b>3</b></td>
@@ -80,6 +91,8 @@
                           <td><b>10</b></td>
                           <td><b>11</b></td>
                           <td><b>12</b></td>
+                          <td><b>Date</b></td>
+                          <td><b>Length</b></td>
                           <td><b>1</b></td>
                           <td><b>2</b></td>
                           <td><b>3</b></td>
@@ -92,6 +105,8 @@
                           <td><b>10</b></td>
                           <td><b>11</b></td>
                           <td><b>12</b></td>
+                          <td><b>Date</b></td>
+                          <td><b>Length</b></td>
                       </tr>
 
                       <tr *ngFor="let weight of baby">
@@ -115,6 +130,8 @@
                           <td>{{weight.first_yearten}}</td>
                           <td>{{weight.first_yeareleven}}</td>
                           <td>{{weight.first_yeartwelve}}</td>
+                          <td>{{weight.oneyeardate | date: 'yyyy/MM/dd'}}</td>
+                          <td>{{weight.oneyearheight}}</td>
 
                           <td>{{weight.sec_yearone}}</td>
                           <td>{{weight.sec_yeartwo}}</td>
@@ -128,6 +145,8 @@
                           <td>{{weight.sec_yearten}}</td>
                           <td>{{weight.sec_yeareleven}}</td>
                           <td>{{weight.sec_yeartwelve}}</td>
+                          <td>{{weight.twoyeardate | date: 'yyyy/MM/dd'}}</td>
+                          <td>{{weight.twoyearheight}}</td>
 
                           <td>{{weight.third_yearone}}</td>
                           <td>{{weight.third_yeartwo}}</td>
@@ -141,6 +160,8 @@
                           <td>{{weight.third_yearten}}</td>
                           <td>{{weight.third_yeareleven}}</td>
                           <td>{{weight.third_yeartwelve}}</td>
+                          <td>{{weight.threeyeardate | date: 'yyyy/MM/dd'}}</td>
+                          <td>{{weight.threeyearheight}}</td>
 
                           <td>{{weight.four_yearone}}</td>
                           <td>{{weight.four_yeartwo}}</td>
@@ -154,6 +175,8 @@
                           <td>{{weight.four_yearten}}</td>
                           <td>{{weight.four_yeareleven}}</td>
                           <td>{{weight.four_yeartwelve}}</td>
+                          <td>{{weight.foueyeardate | date: 'yyyy/MM/dd'}}</td>
+                          <td>{{weight.foueyearheight}}</td>
 
                           <td>{{weight.five_yearone}}</td>
                           <td>{{weight.five_yeartwo}}</td>
@@ -167,6 +190,8 @@
                           <td>{{weight.five_yearten}}</td>
                           <td>{{weight.five_yeareleven}}</td>
                           <td>{{weight.five_yeartwelve}}</td>
+                          <td>{{weight.fiveyeardate | date: 'yyyy/MM/dd'}}</td>
+                          <td>{{weight.fiveyearheight}}</td>
                       </tr>
                     </tbody>
                     </table>
