add weight service and pregnant form service

--- a/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
@@ -109,7 +109,7 @@
                           <td><b>Length</b></td>
                       </tr>
 
-                      <tr *ngFor="let weight of baby">
+                      <tr *ngFor="let weight of weight">
                           <td>{{weight.baby_id}}</td>
                           <td>{{weight.batch_no}}</td>
                           <td>{{weight.name_of_child}}</td>
