--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.scss
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.scss
@@ -9,6 +9,7 @@
 
 /* The container */
 .container {
+  
   display: block;
   position: relative;
   padding-left: 35px;
@@ -44,7 +45,7 @@
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-  background-color:white;
+  background-color: #ccc;
 }
 
 /* When the radio button is checked, add a blue background */
@@ -71,7 +72,7 @@
 	width: 8px;
 	height: 8px;
   border-radius: 50%;
-  
+  background: white;
     
     border-width: 3px;
 }
