--- a/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
+++ b/Frontend/src/app/MOHComponents/addmotherbabyjoineddata/addmotherbabyjoineddata.component.html
@@ -97,13 +97,19 @@
                                         <mat-form-field class="example-full-width">
                                             <input matInput placeholder="BGC" type= "date" formControlName="immunization__BGC">
                                         </mat-form-field>
+                                </div>  
+                        </div>
+                        <div class="row">
+                                <div class="col-md-4">      
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                            <label>Immunization Scar</label>
+                                        <input class="form-check-input" type="checkbox" value="true" formControlName="immunization__scar" >
+                                        <span class="form-check-sign">
+                                            <span class="check"></span>
+                                        </span>
+                                    </label>
                                 </div>
-                                <div class="col-md-2">
-                                        
-                                            <label>Immunization Scars </label>
-                                            <br>
-                                            <input type= "radio" formControlName="immunization__scar" value="true">
-                                        
                                 </div>
                         </div>
                         <label> Immunization Pentavalent</label>
